# ccboost-service

./: README.md  handler.py  reqs.txt  subsample.py  utils.py
ccboost-v0.21/: CMakeLists.txt  ConfigData.cpp  ConfigData.h  ConnectedComponents.h  DiscreteRandomSamplerTest.cpp  HistogramMeanThreshold.h  IntegralImage.h  LineSearch.h  README.txt  SigmoidFitterPlatt.h  SynapseUtils.hxx  TimerRT.h  example_config.cfg  main.cpp
ccboost-v0.21/auxItk/: AllEigenVectorsOfHessian.cxx  BinaryErodeDilateSynapseImageFilter.cxx  EigenOfHessianImageFilter.cxx  EigenOfStructureTensorImageFilter.cxx  GaussianImageFilter.cxx  GradientMagnitudeImageFilter.cxx  LoGImageFilter.cxx  RepolarizeYVersorWithGradient.cxx  SingleEigenVectorOfHessian.cxx  computeSynapseFeatures.py  itkSymmetricEigenAnalysisImageFilter2.txx
ccboost-v0.21/extra/: Matrix3D.h
ccboost-v0.21/slic/: LKM.cpp
ccboost-v0.21/slic/include/: create_slicmap.hxx
config/: example_testing.cfg  example_training.cfg  testspec.cfg  train_mitochondria.cfg  train_synapses.cfg  trainspec.cfg
templates/: test.cfg  train.cfg
